hphp/hack/test/typecheck/enum_class_label/enum_class_wrong_place.php
<?hh

#top_level_label;


function f() : void {
  $x = #label_alone_is_error;
}
